--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,87 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: #282c34;
+}
+
+.loan-calc-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10rem;
+  text-align: left;
+}
+
+.loan-calc-box div {
+  padding: 4rem;
+  border-radius: 50px;
+  border: .5px solid #005b13;
+  background: #e8e8e8;
+  box-shadow:  20px 20px 60px #c5c5c5,
+             -20px -20px 60px #ffffff;
+}
+
+input {
+  padding: 1rem 0.7rem 1rem 1.5rem;
+  margin: 0.5rem 0;
+  font-size: 1.2rem;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  box-sizing: border-box;
+  background-color: #005b13;
   color: white;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.375rem;
+  padding: 1rem 4.25rem;
+  text-decoration: none;
+  width: 100%;
+  margin: 0.3rem 0;
+  font-weight: bold;
+  transition: all .25s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #fff;
+  border-color: #005b13;
+  color: #005b13;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+li {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+h2 {
+  text-decoration: #008600 underline;
+}
+
+.history-box {
+  margin-top: 3rem;
+  transition: all .25s ease-in-out;
+}
+
+@media (max-width: 994px) {
+  .loan-calc-box {
+    gap: 3rem;
   }
 }
